# pslist

./: .gitignore  PLAN.md  README.md  pyproject.toml
wl/: cli.py  fetcher.py  generator.py  leet.py  patterns.py  tokens.py
