[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pslist"
version = "0.1.0"
description = "Username-targeted password wordlist generator"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Shanmukha" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/5h4nnu-dev/wl"
Repository = "https://github.com/5h4nnu-dev/wl"
BugTracker = "https://github.com/5h4nnu-dev/wl/issues"

[project.scripts]
wl = "wl.cli:main"
